Issue #3040241 by bnjmnm, lauriii, DyanneNova: Add section and add block section doesn't have sufficient color contrast for text

--- a/core/modules/layout_builder/css/layout-builder.css
+++ b/core/modules/layout_builder/css/layout-builder.css
@@ -14,10 +14,10 @@
 }
 
 .layout-builder__link--add {
-  color: #787878;
+  color: #686868;
   border-bottom: none;
   padding-left: 24px;
-  background: url(../../../misc/icons/787878/plus.svg) transparent top left / 16px 16px no-repeat;
+  background: url(../../../misc/icons/686868/plus.svg) transparent top left / 16px 16px no-repeat;
 }
 
 .layout-builder__link--add:hover,
